# vantage

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  cli.py  pyproject.toml  vantage_config.py
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
config/: investor_firms.toml  settings.toml  sources.toml  universe.toml
data/: healthcare_stocks.md
dbt_vantage/: dbt_project.yml  profiles.yml
dbt_vantage/models/marts/: dim_company.sql  dim_person.sql  dim_segment.sql  dim_source.sql  fact_covered_lives.sql  fact_event.sql  fact_financials.sql  fact_funding_round.sql  fact_guidance_accuracy.sql  fact_historical_guidance.sql  fact_market_data.sql  fact_operating_metric.sql  fact_policy_exposure.sql  fact_projection.sql  fact_valuation.sql  schema.yml
dbt_vantage/models/metrics/: metric_company_latest.sql  metric_enterprise_value.sql  metric_enterprise_value_history.sql  metric_graham_pure.sql  metric_guidance_adjusted_value.sql  metric_private_safety_index.sql  metric_quality_composite.sql  metric_reverse_dcf.sql  metric_risk_balance.sql  metric_safety_index.sql  metric_safety_index_history.sql  metric_safety_index_transitions.sql  metric_species_ceiling.sql  schema.yml
dbt_vantage/seeds/: README.md  dim_company_seed.csv  dim_segment_seed.csv  dim_source_seed.csv  fact_covered_lives_seed.csv  fact_financials_seed.csv  fact_funding_round_seed.csv  fact_guidance_accuracy_seed.csv  fact_historical_guidance_seed.csv  fact_market_data_seed.csv  fact_policy_exposure_seed.csv  fact_valuation_seed.csv
deploy/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml
docs/: us_healthcare_market_thesis_2026.md
engine/: __init__.py
ingest/: __init__.py
ingest/harvest/: __init__.py  fetch.py
migrations/: 001_core_schema.sql
notebooks/: 01_explore_indicators.py  02_build_index.py  03_index_vs_indicators.py
orchestration/: __init__.py
prospectus/: __init__.py
raw_content/_discovery/: aledade.tsv  hims_hers.tsv  hinge_health.tsv
scripts/: load_curated_financials.py  load_curated_funding.py  print_backtest_and_private.py  print_safety_index.py
src/vantage/: __init__.py  config.py  schema.py
src/vantage/app/: __init__.py  charts.py  dashboard.py  data.py
tests/: conftest.py  test_phase0.py  test_pipeline_e2e.py  test_safety_index.py  test_storage.py
tests/app/: test_data.py  test_scheduler.py
tests/connectors/: test_alphavantage.py  test_fred.py  test_prices.py
tests/forecast/: test_arx.py
tests/index/: test_baselines.py  test_construction.py  test_investors.py
tests/pipeline/: test_alerts.py
tests/transforms/: test_signals.py
(+27 files in other folders)
