[project]
name = "vantage"
version = "0.1.0"
description = "Healthcare industry trackers and a custom health-stock index."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
prices = ["yfinance>=0.2.40"]
notebook = ["jupyterlab>=4.0", "plotly>=5.20"]
dev = ["pytest>=8.0", "ruff>=0.6", "pytest-recording>=0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vantage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Notebooks use bare expressions to display values and run setup before imports.
"notebooks/*" = ["B018", "E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "live: hits real external APIs; skipped by default (needs network/keys)",
]
addopts = "-m 'not live'"
